--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,6 +283,10 @@
          (Traditional) can be an abbreviation to fit in the CHAR LIMIT. -->
     <string name="subtype_generic_traditional"><xliff:g id="LANGUAGE_NAME" example="Nepali">%s</xliff:g> (Traditional)</string>
     <string name="subtype_with_layout_bn_BD"><xliff:g id="LANGUAGE_NAME" example="Bangla">%s</xliff:g> (Akkhor)</string>
+    <!-- Description for Portuguese (BR) keyboard subtype with explicit keyboard layout [CHAR LIMIT=25]
+         (BR) should be an abbreviation of Brazil to fit in the CHAR LIMIT.
+         This should be identical to subtype_pt_BR aside from the trailing (%s). -->
+    <string name="subtype_with_layout_pt_BRNT"><xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g> (Native)</string>
     <!-- Description for "LANGUAGE_NAME" (Compact) keyboard subtype [CHAR LIMIT=25]
          (Compact) can be an abbreviation to fit in the CHAR LIMIT. -->
     <string name="subtype_generic_compact"><xliff:g id="LANGUAGE_NAME" example="Hindi">%s</xliff:g> (Compact)</string>
